tests/invalid/action_buttons/array_wrong_show_if_type.fixture
/action buttons: type must be object.
Line 3
/action buttons: oneOf must match exactly one schema in oneOf.
Line 3
/action buttons/0/show if: type must be string.
Line 6